[QZ-6, QZ-19] fixed rebase problems: removed quiz/overview (was used by sebi for testing only), cleaned up some comments/todos, added missing backgroundgems to createeditor, removed some default icons, cleaned up some imports, fixed some overflow problems in QZ-6 screens, fixed wrong button names on bottomnavbar of quizlobby

--- a/src/pages/Join/Join.css
+++ b/src/pages/Join/Join.css
@@ -15,7 +15,7 @@
     gap: 100px;
     flex: 1 0 0;
     align-self: stretch;
-    overflow-y: scroll;
+    overflow: hidden;
     width: 100%;
     height: 100%;
 }
