--- a/src/pages/Quiz/QuizSlaveLobby/QuizSlaveLobby.css
+++ b/src/pages/Quiz/QuizSlaveLobby/QuizSlaveLobby.css
@@ -32,7 +32,7 @@
     gap: 100px;
     flex: 1 0 0;
     align-self: stretch;
-    overflow-y: scroll;
+    overflow: hidden;
 }
 
 .entryIdContent {
